# wit-bindgen-scala

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: annotations.rs  context.rs  interface.rs  lib.rs  main.rs  resource.rs  world.rs
tests/: wit_bindgen_test.rs
tests/wit-bindgen-test/: README.md
tests/wit-bindgen-test/overlays/common-types/: leaf.scala  runner.scala
tests/wit-bindgen-test/overlays/demo/: runner.scala  test.scala
tests/wit-bindgen-test/overlays/flavorful/: runner.scala  test.scala
tests/wit-bindgen-test/overlays/lists/: runner.scala  test.scala
tests/wit-bindgen-test/overlays/lists-alias/: runner.scala  test.scala
tests/wit-bindgen-test/overlays/many-arguments/: runner.scala  test.scala
tests/wit-bindgen-test/overlays/numbers/: runner.scala  test.scala
tests/wit-bindgen-test/overlays/options/: runner.scala  test.scala
tests/wit-bindgen-test/overlays/package-with-version/: runner.scala
tests/wit-bindgen-test/overlays/records/: runner.scala  test.scala
tests/wit-bindgen-test/overlays/resource-borrow/: runner.scala
tests/wit-bindgen-test/overlays/resource-import-and-export/: runner.scala
tests/wit-bindgen-test/overlays/resource_alias/: runner.scala
tests/wit-bindgen-test/overlays/resource_alias_redux/: runner.scala
tests/wit-bindgen-test/overlays/resource_borrow_in_record/: runner.scala
tests/wit-bindgen-test/overlays/resource_floats/: runner.scala
tests/wit-bindgen-test/overlays/resource_with_lists/: runner.scala
tests/wit-bindgen-test/sbt-template/: build.sbt
(+15 files in other folders)
